--- a/netty_learning_1/pom.xml
+++ b/netty_learning_1/pom.xml
@@ -66,7 +66,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.21.12</version>
+        </dependency>
     </dependencies>
 
     <build>
